src/objects/Prospects__c.object
<CustomObject>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>IF( CONTAINS(Text(Status__c),&quot;Closed&quot;),&quot;Closed&quot;,
IF( CONTAINS(Text(Status__c),&quot;On&quot;),&quot;On Hold&quot;, 
CASE(Text( Status__c ), 

&quot;30 day&quot;, &quot;30 Day&quot;,
&quot;7 Day&quot;, &quot;7 Day&quot;,
&quot;Mentor&quot;, &quot;Mentor&quot;,
&quot;Review&quot;, &quot;Review&quot;,

 IF( Text(Application_Review_Status__c )=&quot;Approved&quot;, &quot;Screening&quot;, &quot;Inquiry&quot;) 
)

)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Background_Check__c</fullName>
        <formula>IF( OR(Text( Background_Check_Results__c )=&quot;Fail&quot;,
Text( Background_Check_Results_Other__c )=&quot;Fail&quot;,
Text( OIG_Results__c )=&quot;Fail&quot;) , 

&quot;Fail&quot;, 

IF(AND(Text( Background_Check_Results__c )=&quot;Pass&quot;,
OR(Text( Background_Check_Results_Other__c )=&quot;Pass&quot;,Text( Background_Check_Results_Other__c )=&quot;Not Applicable&quot;),
Text( OIG_Results__c )=&quot;Pass&quot;), 

&quot;Pass&quot;, 

 IF(OR(Text( Background_Check_Results__c )=&quot;Pending&quot;,
Text( Background_Check_Results_Other__c )=&quot;Pending&quot;,
Text( OIG_Results__c )=&quot;Pending&quot;,NOT(ISNULL( Background_Check_Started_Date__c ))), 


&quot;Pending&quot;, 

&quot;Not Started&quot;
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Background Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <inlineHelpText>Date of the last status change for this Prospect</inlineHelpText>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <description>Enter additional notes for the prospect’s overall status and potential next steps.</description>
        <inlineHelpText>Enter additional notes for the prospect’s overall status and potential next steps.</inlineHelpText>
        <label>Status Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status_First_Contact_Date__c</fullName>
        <formula>IF(ISBLANK(First_Contact_Date__c ),
IF( Today()&gt; Target_First_Contact_Date__c  ,&quot;Overdue&quot;,&quot;Pending&quot;),
IF( Target_First_Contact_Date__c &gt;= First_Contact_Date__c ,&quot;On Time&quot;,&quot;Untimely&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status First Contact Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Health_Statement__c</fullName>
        <formula>IF(OR(TEXT( Health_Status_Statement_Results__c )=&quot;Fail&quot;, TEXT( Health_Status_Statement_Results_Other__c )=&quot;Fail&quot;), &quot;Fail&quot;, 
IF(
AND( 
Text(Health_Status_Statement_Results__c) =&quot;Pass&quot;, 

OR(Text(Health_Status_Statement_Results_Other__c) =&quot;Pass&quot;,
Text(Health_Status_Statement_Results_Other__c) =&quot;Not Applicable&quot;)), 

&quot;Pass&quot;,

 IF(OR(TEXT( Health_Status_Statement_Results__c )=&quot;Pending&quot;, TEXT( Health_Status_Statement_Results_Other__c )=&quot;Pending&quot;,NOT(ISNULL( Health_Status_Statement_Sent__c ))), 

&quot;Pending&quot;, 

 &quot;Not Started&quot;

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Health Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Home_Study__c</fullName>
        <formula>IF(Text( Home_Study_Results__c )=&quot;Pass&quot;, &quot;Pass&quot;, 

IF(Text( Home_Study_Results__c )=&quot;Fail&quot;, &quot;Fail&quot;, 

IF(Text( Home_Study_Results__c )=&quot;Pending&quot;, &quot;Pending&quot;, 

IF( ISNULL( Home_Study_Started_Date__c ) , &quot;Not Started&quot;, &quot;Pending&quot;)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Home Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Pre_Service__c</fullName>
        <formula>IF(Text(  Pre_Service_Results__c  )=&quot;Pass&quot;, &quot;Pass&quot;, 

IF(Text( Pre_Service_Results__c )=&quot;Fail&quot;, &quot;Fail&quot;, 

IF(Text( Pre_Service_Results__c )=&quot;Pending&quot;, &quot;Pending&quot;, 

IF( ISNULL(  Pre_Service_Started_Date__c ) , &quot;Not Started&quot;, &quot;Pending&quot;)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Pre-Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Nurturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold - Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold - Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Agency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_First_Contact_Date__c</fullName>
        <formula>Date_of_Inquiry__c + CASE(MOD( Date_of_Inquiry__c  - DATE(1900, 1, 7), 7),
0, 3,
1,2,
2,2,
3,2,
4,4,
5,4,
6,4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target First Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Phone_Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Phone__c</fullName>
        <description>Third Phone</description>
        <label>Third Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Week_1_Follow_Up_Notes__c</fullName>
        <inlineHelpText>Indicate time of call and/or email details as well as outcome (i.e. left message, prospect did not answer, etc.)</inlineHelpText>
        <label>Week 1 Follow Up Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Week_1_Follow_Up__c</fullName>
        <inlineHelpText>Record date of 1st follow up attempt which should occur within 5 business days of the 1st Contact Attempt date.</inlineHelpText>
        <label>Week 1 Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_2_Follow_Up_Notes__c</fullName>
        <inlineHelpText>Indicate time of call and/or email details as well as outcome (i.e. left message, prospect did not answer, etc.)</inlineHelpText>
        <label>Week 2 Follow Up Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Week_2_Follow_Up__c</fullName>
        <inlineHelpText>Record date of 2nd follow up attempt which should occur within 5 business days of the Week 1 Follow Up date.</inlineHelpText>
        <label>Week 2 Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_3_Follow_Up_Notes__c</fullName>
        <inlineHelpText>Indicate time of call and/or email details as well as outcome (i.e. left message, prospect did not answer, etc.)</inlineHelpText>
        <label>Week 3 Follow Up Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Week_3_Follow_Up__c</fullName>
        <inlineHelpText>Record date of 3rd follow up attempt which should occur within 5 business days of the Week 2 Follow Up date.</inlineHelpText>
        <label>Week 3 Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cid__c</fullName>
        <description>Web Campaign ID</description>
        <inlineHelpText>Web Campaign ID</inlineHelpText>
        <label>Web External Campaign ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_BGcheck__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001gkl&quot;, &quot;&quot;,48,48)
&amp;
 kpi_Background_Check__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;BGcheck&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_Car__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001gkq&quot;, &quot;&quot;,48,48)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;Car&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_Health__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001gl5&quot;, &quot;&quot;,48,48)
&amp;
 kpi_Health_Statement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;Health&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_home__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001glA&quot;, &quot;Home&quot;, 48, 48)
&amp;
kpi_Home_Study__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;home&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_inspection__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001gkm&quot;, &quot;&quot;,48,48)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;inspection&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_license__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001glF&quot;, &quot;&quot;,48,48)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;license&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_pre_service__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001glU&quot;, &quot;Pre-Service&quot;, 48,48)
&amp;
 kpi_Pre_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;pre-service&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_references__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001glQ&quot;, &quot;&quot;,48,48)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;references&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_reviewfinal__c</fullName>
        <formula>IF(ISNULL(  Provider_Agreement_Signature_Date__c   ),  zRedX__c,  zGreenChk__c ) &amp;&quot;  Provider Agreement Signature Date &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Steps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_class_webinfo__c</fullName>
        <formula>IF(  UPPER(Entry_Point__c) =&quot;WEB&quot;, 
 IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000002No8&quot;, &quot;pic&quot;,50,50) 
&amp;
br()
&amp;
&quot;This is a web-based inquiry.&quot;
&amp;
br()
&amp;
&quot;The Prospect listed they were interested in supporting - &quot;
&amp;
TEXT( Im_intersted_in_supporting__c )
, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;div class=&quot;webinfo&quot; /&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kpi_Background_Check__c</fullName>
        <formula>CASE(       Status_Background_Check__c     , 
&quot;Not Started&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001glj&quot;, &quot;Not Started&quot;, 20,20) 
, 
&quot;Pending&quot;
,
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001gle&quot;, &quot;In Progress&quot;, 20,20) 
,

&quot;Pass&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001gl0&quot;, &quot;Pass&quot;, 20,20) 
, 
&quot;Fail&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001glZ&quot;, &quot;Fail&quot;, 20,20) 
, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>kpi Background Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kpi_Health_Statement__c</fullName>
        <formula>CASE(        Status_Health_Statement__c      , 
&quot;Not Started&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001glj&quot;, &quot;Not Started&quot;, 20,20) 
, 
&quot;Pending&quot;
,
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001gle&quot;, &quot;In Progress&quot;, 20,20) 
,

&quot;Pass&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001gl0&quot;, &quot;Pass&quot;, 20,20) 
, 
&quot;Fail&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001glZ&quot;, &quot;Fail&quot;, 20,20) 
, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>kpi Health Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kpi_Home_Study__c</fullName>
        <formula>CASE(      Status_Home_Study__c     , 
&quot;Not Started&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001glj&quot;, &quot;Not Started&quot;, 20,20) 
, 
&quot;Pending&quot;
,
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001gle&quot;, &quot;In Progress&quot;, 20,20) 
,

&quot;Pass&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001gl0&quot;, &quot;Pass&quot;, 20,20) 
, 
&quot;Fail&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001glZ&quot;, &quot;Fail&quot;, 20,20) 
, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>kpi Home Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kpi_Pre_Service__c</fullName>
        <formula>CASE(     Status_Pre_Service__c      , 
&quot;Not Started&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001glj&quot;, &quot;Not Started&quot;, 20,20) 
, 
&quot;Pending&quot;
,
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001gle&quot;, &quot;In Progress&quot;, 20,20) 
,

&quot;Pass&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001gl0&quot;, &quot;Pass&quot;, 20,20) 
, 
&quot;Fail&quot;
, 
 IMAGE(&quot;servlet/servlet.FileDownload?file=015U00000001glZ&quot;, &quot;Fail&quot;, 20,20) 
, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>kpi Pre-Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>org__c</fullName>
        <description>Organic Referral</description>
        <inlineHelpText>Organic Referral</inlineHelpText>
        <label>Web Organic Referral</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rs__c</fullName>
        <description>Web External Campaign ID</description>
        <inlineHelpText>Web External Campaign ID</inlineHelpText>
        <label>Web Referral Source ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tag__c</fullName>
        <label>Web tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tp__c</fullName>
        <label>Web Targeted Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zCaution__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001gkv&quot;, &quot;Caution&quot;, 16,16)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zCaution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zGreenChk__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001gl0&quot;, &quot;Green Check&quot;,16,16)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zGreenChk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zRedX__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000001glZ&quot;, &quot;Red X&quot;, 16,16)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zRedX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzEmailBusinessName__c</fullName>
        <formula>Region__r.Business_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzEmailBusinessName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzEmailLocalOfficeName__c</fullName>
        <formula>Region__r.Local_Office_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzEmailLocalOfficeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzEmailOfficePhone__c</fullName>
        <formula>Region__r.Office_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzEmailOfficePhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzEmailStateName__c</fullName>
        <formula>Region__r.State_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzEmailStateName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzEmailTempQualifier__c</fullName>
        <formula>TEXT( Region__r.EmailTempQualifier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzEmailTempQualifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzSend_Email_to_Owner__c</fullName>
        <formula>IF ( Routed_To__r.Email_Notification__c = TRUE, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzSend Email to Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Prospect</label>
    <listViews>
        <fullName>Active_Prospects3</fullName>
        <columns>Date_of_Inquiry__c</columns>
        <columns>First_Name__c</columns>
        <columns>NAME</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>Status__c</columns>
        <columns>State__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Prospects</label>
    </listViews>
    <listViews>
        <fullName>All_30_day</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Program__c</columns>
        <columns>Screening_Progress_Percent__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Notes__c</columns>
        <columns>Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>30 Day</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>FL</value>
        </filters>
        <label>All - 30 Day</label>
    </listViews>
    <listViews>
        <fullName>All_7_day</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Program__c</columns>
        <columns>Screening_Progress_Percent__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Notes__c</columns>
        <columns>Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>7 Day</value>
        </filters>
        <label>All - 7 Day</label>
    </listViews>
    <listViews>
        <fullName>All_Closed</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Region__c</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>On_Hold_Closed_Reason__c</columns>
        <columns>Other_Reasons__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Prospect,Closed - Agency</value>
        </filters>
        <label>All - Closed</label>
    </listViews>
    <listViews>
        <fullName>All_Mentors</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Provider_Agreement_Signature_Date__c</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>Outreach_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Mentor</value>
        </filters>
        <label>All - Mentors</label>
    </listViews>
    <listViews>
        <fullName>All_On_Hold</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Closed_Date__c</columns>
        <columns>On_Hold_Closed_Reason__c</columns>
        <columns>Other_Reasons__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On hold - Prospect,On hold - Agency</value>
        </filters>
        <label>All - On Hold</label>
    </listViews>
    <listViews>
        <fullName>All_Prospects_Nurturing</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Region__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Notes__c</columns>
        <columns>Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Nurturing</value>
        </filters>
        <label>All - Nurturing</label>
    </listViews>
    <listViews>
        <fullName>All_Review</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Program__c</columns>
        <columns>Screening_Progress_Percent__c</columns>
        <columns>Final_Review__c</columns>
        <columns>Notes__c</columns>
        <columns>Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Review</value>
        </filters>
        <label>All - Review</label>
    </listViews>
    <listViews>
        <fullName>All_Web_Inquiries</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Region__c</columns>
        <columns>First_Contact_Date__c</columns>
        <columns>Contact_Made__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entry_Point__c</field>
            <operation>equals</operation>
            <value>web</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed - Prospect,Closed - Agency</value>
        </filters>
        <label>All - Web Inquiries (Not Closed)</label>
    </listViews>
    <listViews>
        <fullName>Cambridge_Nurturing</fullName>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>City__c</columns>
        <columns>ReferredByPhone__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status_Comments__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Nurturing</value>
        </filters>
        <label>My - Nurturing</label>
    </listViews>
    <listViews>
        <fullName>Care_com_Prospects</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Region__c</columns>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Primary_Phone__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cid__c</field>
            <operation>equals</operation>
            <value>Care.com</value>
        </filters>
        <filters>
            <field>tag__c</field>
            <operation>equals</operation>
            <value>Care.com</value>
        </filters>
        <filters>
            <field>Outreach_Source__c</field>
            <operation>equals</operation>
            <value>Care.com - National</value>
        </filters>
        <label>Care.com Prospects</label>
    </listViews>
    <listViews>
        <fullName>My_30_day</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>ReferredByPhone__c</columns>
        <columns>Screening_Progress_Percent__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Notes__c</columns>
        <columns>Status_Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>30 Day</value>
        </filters>
        <label>My - 30 Day</label>
    </listViews>
    <listViews>
        <fullName>My_7_day</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>ReferredByPhone__c</columns>
        <columns>Screening_Progress_Percent__c</columns>
        <columns>Notes__c</columns>
        <columns>Status_Comments__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Notify_Manager_to_Approve__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>7 Day</value>
        </filters>
        <label>My - 7 Day</label>
    </listViews>
    <listViews>
        <fullName>My_Active</fullName>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>City__c</columns>
        <columns>ReferredByPhone__c</columns>
        <columns>Program__c</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>Stage__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My - Active</label>
    </listViews>
    <listViews>
        <fullName>My_Closed</fullName>
        <columns>Date_of_Inquiry__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>City__c</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>Contact_Made__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>On_Hold_Closed_Reason__c</columns>
        <columns>Other_Reasons__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - Prospect,Closed - Agency</value>
        </filters>
        <label>My - Closed</label>
    </listViews>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Allow_Nurturing_only_on_Inquiry_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Nurturing&quot;),ISPICKVAL(  Application_Review_Status__c , &quot;Approved&quot;))
&amp;&amp; 
(Date_of_Inquiry__c &gt;= $Setup.PMC_ValidationGrandfatherDate__c.Date__c )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Prospects may only be moved to a nurturing status during initial inquiry stage (before application is approved) indicating additional time is needed to nurture the relationship. For prospects in later stages select the appropriate “On-Hold” status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allow_on_hold_only_if_screening_stage</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(ISPICKVAL(Status__c, &quot;On hold - Prospect&quot;), 
ISPICKVAL( Status__c , &quot;On hold - Agency&quot;)), 
NOT(ISPICKVAL( Application_Review_Status__c , &quot;Approved&quot;)), $User.ProfileId &lt;&gt; &apos;00eU0000000myCw&apos; )
&amp;&amp; 
(Date_of_Inquiry__c &gt;= $Setup.PMC_ValidationGrandfatherDate__c.Date__c )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The “on hold” value can only be selected if a Prospect has reached screening stage (after the application is approved)</errorMessage>
    </validationRules>
</CustomObject>